# Manifold_test

./: Makefile.am  Makefile.in  autogen.sh  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/Design/: iris_design.odt  kernel_event_scheduling_processing.odt  kernel_messaging.odt  manifold_software_architecture.odt  mcp-cache.odt
doc/Tutorials/: 01-Introduction.pptx  02-execution-model.pptx  03-emulation.pptx  04-core-models.pptx  05-network-models.pptx  06-memory-system.pptx  07-simulation.pptx  08-EI.pptx  09-summary.pptx  template.pptx
doc/doxygen/: README.dox
doc/user/: GettingStartedWithmanifold.odt  HowToGenerateTraces.odt  component_developer_guide.dox  component_developer_guide.odt  kernel_api.odt  user_guide.odt
kernel/: Makefile.in  cdecl-spx.patch  clock.cc  clock.h  component-decl.h  component.h  configure  link.h  manifold-decl.h  manifold.cc  message.h  messenger.cc  messenger.h  quantum_scheduler.cc  quantum_scheduler.h  scheduler.cc  scheduler.h  stat.h  syncalg.cc  syncalg.h
kernel/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
kernel/examples/pc/: Makefile  adder.cc  adder.h  example.cc  register.cc  register.h
kernel/test/componentTest/: CmbTest1.cc  CmbTest2.cc  CmbTest3.cc  CmbTest4.cc  LBTSTest1.cc  LBTSTest2.cc  LBTSTest3.cc  Makefile  ManifoldConnectTest.cc  ManifoldConnectTest2.cc  MessagingClockTest.cc  MessagingClockTest_ser.cc  MessagingClockTest_ser_pointer.cc  MessagingHalfClockTest.cc  MessagingHalfClockTest_ser.cc  MessagingHalfClockTest_ser_pointer.cc  MessagingHalfTest.cc  MessagingHalfTest_ser.cc  MessagingHalfTest_ser_pointer.cc  MessagingTest.cc  MessagingTest_ser.cc  MessagingTest_ser_pointer.cc  MessagingTest_ser_pointer2.cc  MessagingTimeTest.cc  MessagingTimeTest_ser.cc  MessagingTimeTest_ser_pointer.cc  QtmTest4.cc  SchedulerTestTerminate.cc  SchedulerTestTerminate2.cc  run_all.sh
kernel/test/unitTest/: ClockTest.cc  ClockTest2.cc  ComponentTest.cc  LinkOutputTest.cc  LinkOutputTest2.cc  LinkTest.cc  Makefile  ManifoldConnectTest.cc  ManifoldScheduleTest.cc  ManifoldTest.cc  MessengerTest0.cc  MessengerTest_big_data1.cc  dvfsTest.cc  run_all.sh
models/cache/mcp-cache/: .L1_cache.cpp.swp  L1_cache.cpp  L1_cache.h  L2_cache.cpp  L2_cache.h  LLP_cache.cpp  LLP_cache.h  LLS_cache.cpp  MESI_LLP_cache.cpp  MESI_LLS_cache.cpp  Makefile.am  Makefile.in  MemoryControllerMap.h  cache-counters.h  configure  debug.h  hash_table.cpp  hash_table.h  lp_lls_unit.cpp  lp_lls_unit.h  mux_demux.cpp  mux_demux.h
models/cache/mcp-cache/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
models/cache/simple-cache/: Makefile.in  configure
models/cache/simple-cache/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
models/cross/mcp_cache-iris/: Makefile.in  configure  configure.ac  mcp-iris.cc  mcp-iris.h
models/cross/mcp_cache-iris/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
models/energy_introspector/: ENERGYLIB_MCPAT.cc  ENERGYLIB_MCPAT.h  Makefile  THERMALLIB_3DICE.cc  THERMALLIB_3DICE.h  definitions.h  energy_introspector.cc  energy_introspector.h  include.h  library.h  parameters.cc  parameters.h  parser.cc  parser.h
models/energy_introspector/.svn/: wc.db
models/energy_introspector/CONFIG/: XGC.tar.bz2
models/energy_introspector/CONFIG/MCPAT/: Xeon.config  Xeon_mcpat.config
models/energy_introspector/CONFIG/TSV/: tsv.config
models/energy_introspector/CONFIG/XGC/: .16core_ooo.config.swp  .16core_ooo_8.config.swp  16core_ooo.config  16core_ooo_0.05.config  16core_ooo_8.config  3d-ice.config  4core_flp.config  4core_ooo(experiment).config  4core_ooo.config  4core_ooo_44.config  4core_ooo_53.config  Atom.config  (+10 more)
models/energy_introspector/TEST_MAIN/: test-3dice.cc  test-hotspot.cc  test-mcpat.cc
models/memory/CaffDRAM/: Bank.cpp  Controller.cpp  Controller.h  Dreq.cpp  Dsettings.cpp  Dsettings.h  Makefile.in  McMap.cpp  configure
models/memory/simple-mc/: Makefile.am  configure.ac  simple_mc.cc  simple_mc.h
models/memory/simple-mc/test/componentTest/: Makefile  run_all.sh  simple_mcTest.cc
models/network/iris/: Makefile.am  Makefile.in  configure  configure.ac
models/network/simple-net/: Makefile.am  configure.ac  interfaceCreator.h  mapping.cc  mapping.h  network.cc  network.h  networkInterface.h  networkPkt.h  router.cc  router.h
models/network/simple-net/examples/adapter1/: Makefile  client.cc  client.h  main.cc
models/network/simple-net/examples/example1/: Makefile  client.h  main.cc  terminal.cc  terminal.h
models/network/simple-net/test/componentTest/: Makefile  meshNetworkTest.cc  ringNetworkTest.cc  run_all.sh
models/network/simple-net/test/unitTest/: Makefile  meshNetworkTest.cc  meshRouterTest.cc  networkInterfaceTest.cc  ringNetworkTest.cc  ringRouterTest.cc  run_all.sh
models/processor/spx/: Makefile.am  Makefile.in  README  component.cc  component.h  configure  core.cc  core.h  instruction.cc  instruction.h  interrupt_handler.cc  interrupt_handler.h  pipeline.cc  pipeline.h
models/processor/spx/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
models/processor/spx/pipeline/: inorder.cc  inorder.h  outorder.cc  outorder.h
simulator/SPXQsim/: .conf_llp.cfg.swp  .sysBuilder_llp.cc.swp  16core_ooo.config.ss  Makefile  common.cc  common.h  conf_llp.cfg.bst.ss  ei_wrapper.cc  ei_wrapper.h  inorder.config  outorder.config  outorder.config.ss  run.sh  smp_llp.cc  sram_perf.h  sram_volt.h  sysBuilder_llp.cc  sysBuilder_llp.h
uarch/: DestMap.h  Makefile.am  Makefile.in  configure  networkPacket.h
uarch/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
util/: daily_build.sh  jenkins_build.sh  parsec_test.sh
util/itrace/: README  itrace.cpp  makefile
util/qsim/: README  qsimclient-core.cc  simple_PIN.cpp
(+174 files in other folders)
